--- a/webApp/views/login.hbs
+++ b/webApp/views/login.hbs
@@ -116,7 +116,7 @@
 
       if (response.ok && result.success) {
         console.log('Login Success:', result); 
-        alert('Login successful! Redirecting to dashboard...');
+        // alert('Login successful! Redirecting to dashboard...');
         window.location.href = '/dashboard'; 
       } 
       else {
