--- a/webApp/views/signup.hbs
+++ b/webApp/views/signup.hbs
@@ -247,7 +247,7 @@
 
       if (response.ok) {
         console.log('Registration Successful:'); 
-        alert('Registration successful! Redirecting to dashboard...');
+        // alert('Registration successful! Redirecting to dashboard...');
         window.location.href = '/dashboard'; 
       } 
       else {
