--- a/webApp/views/partials/inactive_collection.hbs
+++ b/webApp/views/partials/inactive_collection.hbs
@@ -10,26 +10,32 @@
       </thead>
       <tbody>
         <!-- Rows for schema details will be dynamically injected here -->
-        {{!-- {{#each schemas}}
-          <tr>
-            <td></td>
-
-          </tr>
-        {{/each}} --}}
+        
       </tbody>
     </table>
   </div>
   
   <div class="data_processing">
-    {{!-- Display the different ways of inserting data into the specified collection --}}
-    <div class="processing_opts">
-      <span>Upload File</span>
-      <span>Enter manually</span>
-      <span>Get .xls template</span>
+    <h2>Insert data</h2>
+    <div class="empty_explain">
+      <p>This collection is empty. Choose from the following your preferred method of inserting data into the collection.</p>
     </div>
 
-    <div class="processing_method">
-      
+    <div class="processing_opts">
+      <button class="init_fileUpload" id="open-modal-btn" >
+        <img src="assets/icons/upload-file.svg" alt="upload-file">
+        <span>Upload File</span>
+      </button>
+
+      <button class="init_manualForm">
+        <img src="assets/icons/form.svg" alt="form">
+        <span>Enter manually</span>
+      </button>
+
+      <button class="init_xlsTemplate">
+        <img src="assets/icons/template.svg" alt="template">
+        <span>Get .xls template</span>
+      </button>
     </div>
   </div>
 </div>
